fixed alignment of links next to buttons

--- a/app/assets/sass/_block-link.scss
+++ b/app/assets/sass/_block-link.scss
@@ -2,4 +2,10 @@
   display: inline-block;
   @include govuk-responsive-margin(4, "bottom");
   @include govuk-responsive-margin(4, "right");
+
+
+  .govuk-button ~ & {
+  	@include govuk-responsive-padding(2);
+  }
+
 }
